--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -38,7 +38,6 @@ lazy val root = (project in file(".")).
       "jakarta.annotation" % "jakarta.annotation-api" % "1.3.5" % "compile",
       "junit" % "junit" % "4.13.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
-      "javax.annotation" % "javax.annotation-api" % "1.3.2",
-      "io.opencensus" % "opencensus-api" % "0.31.0"
+      "javax.annotation" % "javax.annotation-api" % "1.3.2"
     )) ++ publishSettings:_*
   )
