--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -1,3 +1,4 @@
+{{! based on https://github.com/OpenAPITools/openapi-generator/blob/master/modules/openapi-generator/src/main/resources/Java/libraries/okhttp-gson/build.sbt.mustache }}
 import Publishing._
 import Version._
 
@@ -12,32 +13,32 @@ lazy val root = (project in file(".")).
     publishArtifact in (Compile, packageDoc) := false,
     resolvers += Resolver.mavenLocal,
     libraryDependencies ++= Seq(
-      "io.swagger" % "swagger-annotations" % "1.5.24",
+      "io.swagger" % "swagger-annotations" % "1.6.5",
       "com.squareup.okhttp3" % "okhttp" % "4.10.0",
       "com.squareup.okhttp3" % "logging-interceptor" % "4.10.0",
-      "com.google.code.gson" % "gson" % "2.8.6",
-      "org.apache.commons" % "commons-lang3" % "3.10",
+      "com.google.code.gson" % "gson" % "2.9.1",
+      "org.apache.commons" % "commons-lang3" % "3.12.0",
+      "jakarta.ws.rs" % "jakarta.ws.rs-api" % "3.1.0",
       {{#openApiNullable}}
-      "org.openapitools" % "jackson-databind-nullable" % "0.2.2",
+      "org.openapitools" % "jackson-databind-nullable" % "0.2.6",
       {{/openApiNullable}}
+      {{#withAWSV4Signature}}
+      "software.amazon.awssdk" % "auth" % "2.20.157",
+      {{/withAWSV4Signature}}
       {{#hasOAuthMethods}}
-      "org.apache.oltu.oauth2" % "org.apache.oltu.oauth2.client" % "1.0.1",
+      "org.apache.oltu.oauth2" % "org.apache.oltu.oauth2.client" % "1.0.2",
       {{/hasOAuthMethods}}
       {{#joda}}
       "joda-time" % "joda-time" % "2.9.9" % "compile",
       {{/joda}}
-      {{#threetenbp}}
-      "org.threeten" % "threetenbp" % "1.4.3" % "compile",
-      {{/threetenbp}}
       {{#dynamicOperations}}
-      "io.swagger.parser.v3" % "swagger-parser-v3" "2.0.23" % "compile"
+      "io.swagger.parser.v3" % "swagger-parser-v3" "2.0.30" % "compile"
       {{/dynamicOperations}}
-      "io.gsonfire" % "gson-fire" % "1.8.3" % "compile",
-      "jakarta.annotation" % "jakarta.annotation-api" % "1.3.5" % "compile",
+      "io.gsonfire" % "gson-fire" % "1.9.0" % "compile",
+      "jakarta.annotation" % "jakarta.annotation-api" % "2.1.1" % "compile",
       "com.google.code.findbugs" % "jsr305" % "3.0.2" % "compile",
-      "jakarta.annotation" % "jakarta.annotation-api" % "1.3.5" % "compile",
-      "junit" % "junit" % "4.13.1" % "test",
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
-      "javax.annotation" % "javax.annotation-api" % "1.3.2"
+      "org.mockito" % "mockito-core" % "3.12.4" % "test"
     )) ++ publishSettings:_*
   )
