--- a/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -11,6 +11,7 @@ lazy val root = (project in file(".")).
     javacOptions in compile ++= Seq("-Xlint:deprecation"),
     publishArtifact in (Compile, packageDoc) := false,
     resolvers += Resolver.mavenLocal,
+    dependencyOverrides += "org.json" %% "json" % "20240205",
     libraryDependencies ++= Seq(
       "io.swagger" % "swagger-annotations" % "1.5.24",
       "com.squareup.okhttp3" % "okhttp" % "4.10.0",
@@ -41,3 +42,4 @@ lazy val root = (project in file(".")).
       "javax.annotation" % "javax.annotation-api" % "1.3.2"
     )) ++ publishSettings:_*
   )
+
