--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -12,7 +12,6 @@ lazy val root = (project in file(".")).
     javacOptions in compile ++= Seq("-Xlint:deprecation"),
     publishArtifact in (Compile, packageDoc) := false,
     resolvers += Resolver.mavenLocal,
-    dependencyOverrides += "org.json" %% "json" % "20240205",
     libraryDependencies ++= Seq(
       "io.swagger" % "swagger-annotations" % "1.6.5",
       "com.squareup.okhttp3" % "okhttp" % "4.10.0",
@@ -41,5 +40,6 @@ lazy val root = (project in file(".")).
       "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "org.mockito" % "mockito-core" % "3.12.4" % "test"
-    )) ++ publishSettings:_*
+    ),
+    dependencyOverrides += "org.json" %% "json" % "20240205") ++ publishSettings:_*
   )
