use java dep notation

--- a/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -40,6 +40,6 @@ lazy val root = (project in file(".")).
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "javax.annotation" % "javax.annotation-api" % "1.3.2"
     ),
-    dependencyOverrides += "org.json" %% "json" % "20240205") ++ publishSettings:_*
+    dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
   )
 
