--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -40,5 +40,6 @@ lazy val root = (project in file(".")).
       "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "org.mockito" % "mockito-core" % "3.12.4" % "test"
-    )) ++ publishSettings:_*
+    ),
+    dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
   )
