--- a/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -39,5 +39,7 @@ lazy val root = (project in file(".")).
       "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "javax.annotation" % "javax.annotation-api" % "1.3.2"
-    )) ++ publishSettings:_*
+    ),
+    dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
   )
+
