--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -39,7 +39,8 @@ lazy val root = (project in file(".")).
       "com.google.code.findbugs" % "jsr305" % "3.0.2" % "compile",
       "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
-      "org.mockito" % "mockito-core" % "3.12.4" % "test"
+      "org.mockito" % "mockito-core" % "3.12.4" % "test",
+      "org.json" % "json" % "20240205"
     ),
     dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
   )
