--- a/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -38,7 +38,8 @@ lazy val root = (project in file(".")).
       "jakarta.annotation" % "jakarta.annotation-api" % "1.3.5" % "compile",
       "org.junit.jupiter" % "junit-jupiter-api" % "5.9.1" % "test",
       "com.novocode" % "junit-interface" % "0.10" % "test",
-      "javax.annotation" % "javax.annotation-api" % "1.3.2"
+      "javax.annotation" % "javax.annotation-api" % "1.3.2",
+      "org.json" % "json" % "20240205"
     ),
     dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
   )
