--- a/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -41,6 +41,5 @@ lazy val root = (project in file(".")).
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "org.mockito" % "mockito-core" % "3.12.4" % "test",
       "org.json" % "json" % "20240205"
-    ),
-    dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
+    )) ++ publishSettings:_*
   )
