--- a/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
+++ b/codegen_java_old/templates/libraries/okhttp-gson/build.sbt.mustache
@@ -40,7 +40,6 @@ lazy val root = (project in file(".")).
       "com.novocode" % "junit-interface" % "0.10" % "test",
       "javax.annotation" % "javax.annotation-api" % "1.3.2",
       "org.json" % "json" % "20240205"
-    ),
-    dependencyOverrides += "org.json" % "json" % "20240205") ++ publishSettings:_*
+    )) ++ publishSettings:_*
   )
 
