--- a/codegen_java/templates/ApiClient.mustache
+++ b/codegen_java/templates/ApiClient.mustache
@@ -147,7 +147,7 @@ public class ApiClient {
         /* 
          * Terra addition: manually add the oidc authentication because openidConnection security scheme 
          * is unsupported by openapi-generator. 
-         * See: https://github.com/OpenAPITools/openapi-generator/issues/425.
+         * See: https://github.com/OpenAPITools/openapi-generator/issues/425
          */
         authentications.put("oidc", new HttpBearerAuth("bearer"));
 
