--- a/codegen_java_old/templates/ApiClient.mustache
+++ b/codegen_java_old/templates/ApiClient.mustache
@@ -145,8 +145,8 @@ public class ApiClient {
         authentications.put("AWS4Auth", new AWS4Auth());{{/withAWSV4Signature}}
         
         /* 
-         * Terra addition: manually add the oidc authentication because openidConnection security scheme 
-         * is unsupported by openapi-generator. 
+         * Terra addition: manually add oidc authentication because the openidConnect security scheme 
+         * is unsupported by openapi-generator.
          * See: https://github.com/OpenAPITools/openapi-generator/issues/425
          */
         authentications.put("oidc", new HttpBearerAuth("bearer"));
